// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expense Summary 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing
      <span
        className="span"
      >
         
        0
         
      </span>
      <span>
         expenses
      </span>
      , which 
      <span>
        total 
      </span>
      <span
        className="span"
      >
        $0.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should render Expense Summary correctly with just one item 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing
      <span
        className="span"
      >
         
        1
         
      </span>
      <span>
         expense
      </span>
      , which 
      <span>
        totals 
      </span>
      <span
        className="span"
      >
        $1.34
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should render Expense Summary correctly with multiple items 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing
      <span
        className="span"
      >
         
        7
         
      </span>
      <span>
         expenses
      </span>
      , which 
      <span>
        total 
      </span>
      <span
        className="span"
      >
        $1,345.67
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
